tests/baselines/reference/parserES5SymbolProperty9.errors.txt
tests/cases/conformance/parser/ecmascript5/Symbols/parserES5SymbolProperty9.ts(2,6): error TS2693: 'Symbol' only refers to a type, but is being used as a value here.


==== tests/cases/conformance/parser/ecmascript5/Symbols/parserES5SymbolProperty9.ts (1 errors) ====
    var x: {
        [Symbol.toPrimitive]: string
         ~~~~~~
!!! error TS2693: 'Symbol' only refers to a type, but is being used as a value here.
    }